# ansible-shun

./: README.md  galaxy.yml  pyproject.toml
.ansible/collections/ansible_collections/mypaceshun/base/: .ansible-lint  CHANGELOG.md  FILES.json  MANIFEST.json  Makefile
.ansible/collections/ansible_collections/mypaceshun/base/roles/common/tasks/: rhel.yml
.ansible/collections/ansible_collections/mypaceshun/base/roles/nfshome/templates/: shun.auto.home.conf
base/: README.md
base/defaults/: main.yml
base/handlers/: main.yml
base/meta/: main.yml
base/tasks/: centos.yml  main.yml  ubuntu16.yml
base/tasks/autofs/: main.yml  rhel.yml
base/tasks/common/: centos.yml  main.yml
base/tasks/dotfiles/: centos.yml  main.yml
base/tasks/ldapauth/: centos.yml  centos7.yml  centos8.yml  main.yml  rhel9.yml
base/tasks/nfshome/: centos.yml  main.yml
base/templates/: shun.hosts  shun.sssd.conf  shun.sudoers.d.shun
playbooks/: all.yml  common.yml  dotfiles.yml  ldapauth.yml  nfshome.yml
roles/common/defaults/: main.yml
roles/common/handlers/: main.yml
roles/common/tasks/: main.yml  rhel.yml
roles/common/templates/: shun.chrony.conf
roles/dotfiles/meta/: main.yml
roles/dotfiles/tasks/: rhel.yml
roles/ldapauth/tasks/: rhel.yml
roles/ldapauth/templates/: shun.sssd.conf
roles/nfshome/tasks/: rhel.yml
roles/nfshome/templates/: shun.auto.home
