[tool.poetry]
name = "ansible-shun"
version = "0.1.0"
description = "mypaceshun original Ansible roles"
authors = ["KAWAI Shun <mypaceshun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^5.0.1"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
