[tool.poetry]
name = "ansible-shun"
version = "0.1.0"
description = "mypaceshun original Ansible roles"
authors = ["KAWAI Shun <mypaceshun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^7.4.0"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.30.0"
ansible-lint = { version="^6.9.0", markers = "platform_system != 'Windows'" }

[tool.poe.tasks.lint]
cmd = "ansible-lint base/"
help = "run ansible-lint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
